--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MARIADB_USER=abhi
-MARIADB_DATABASE=abdata
-MARIADB_ROOT_PASSWORD=asd123.
-MARIADB_PASSWORD=asd123.
+MYSQL_USER=abhi
+MYSQL_DATABASE=abdata
+MYSQL_ROOT_PASSWORD=asd123.
+MYSQL_PASSWORD=asd123.
 
