--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-MYSQL_USER=abhi
-MYSQL_DATABASE=abdata
-MYSQL_ROOT_PASSWORD=asd123.
-MYSQL_PASSWORD=asd123.
+MONGOINITDB_ROOT_USER=abhI
+MONGO_INITDB_ROOT_PASSWORD=abdatabase
 
